# cs-cpp

./: .gitignore
CPlusPlus/: CMakeLists.txt  library.cpp  library.h
CSharp/: CSharp.sln
CSharp/CSharpApp/: CSharpApp.csproj  HelloWorld.cs  Program.cs
CSharp/CSharpLib/: CSharpLib.csproj  Class1.cs
